--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dom-to-image-more": "^3.7.1",
+    "html2canvas": "^1.4.1",
     "json-server": "^1.0.0-beta.3",
+    "jspdf": "^3.0.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
     "oidc-client-ts": "^3.2.0",
