--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -95,6 +95,11 @@
       <artifactId>spring-security-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>pdfbox</artifactId>
+      <version>2.0.30</version>
+    </dependency>
   </dependencies>
 
   <build>
