--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,4 +8,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Keycloak Configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/event-ticket-platform
+keycloak.admin.url=http://localhost:9090
+keycloak.realm=event-ticket-platform
+keycloak.admin.username=admin
+keycloak.admin.password=admin
+keycloak.client.id=event-ticket-client
+keycloak.client.secret=nfCJmmoiCWbHW38m16bujSBIW3ujoJzN
