Add complete password reset system with styled emails and token-based authentication
Features:
- Custom EmailService with professional HTML email templates
- Token-based password reset flow with 24-hour expiry
- PasswordResetToken entity and repository for token management
- Frontend reset password form with validation
- Integration with Keycloak for password updates
- CORS and security configuration for reset endpoints
- Gmail SMTP configuration for email delivery
- Single-use token enforcement to prevent reuse

Backend changes:
- Added spring-boot-starter-mail dependency
- Created EmailService for sending styled HTML emails
- Created PasswordResetToken entity with expiry tracking
- Added ResetPasswordRequest DTO
- Updated AuthService with sendPasswordResetEmail and resetPassword methods
- Updated KeycloakService with updateUserPassword method
- Added POST /api/auth/reset-password endpoint in AuthController
- Added reset-password to SecurityConfig permitted endpoints
- Configured Gmail SMTP in application.properties

Frontend changes:
- Created reset-password-page.tsx with form validation
- Added /reset-password route to main.tsx
- Updated login page with 'Forgot Password?' link

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,3 +17,17 @@ keycloak.admin.username=admin
 keycloak.admin.password=admin
 keycloak.client.id=event-ticket-client
 keycloak.client.secret=nfCJmmoiCWbHW38m16bujSBIW3ujoJzN
+
+# SMTP Configuration for Email Sending (Gmail)
+# To use Gmail: Enable 2FA and create App Password at https://myaccount.google.com/apppasswords
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=supersaiyan2k03@gmail.com
+spring.mail.password=tvxo sfox haqz ftph
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+# Frontend Configuration
+app.frontend.url=http://localhost:5173
