feat: Add Railway deployment configuration with production branch strategy
Infrastructure:
- Add railway.toml for Railway deployment configuration
- Add Procfile for process management
- Add system.properties to specify Java 21 runtime
- Add .gitignore for production environment files

Backend changes:
- Update application.properties to use environment variables
- Add Spring Boot Actuator dependency for health checks
- Configure SecurityConfig to allow actuator endpoints
- Support dynamic PORT configuration from Railway

Deployment automation:
- Add setup-production-branch.sh to create production branch
- Add deploy-production.sh for automated deployments
- Add RAILWAY_DEPLOYMENT.md with comprehensive guide

Production workflow:
- Separate production branch for Railway deployments
- Main branch for active development
- Automated merge and deploy script
- Environment variable templates for production

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,33 +1,41 @@
 spring.application.name=tickets
-# Database Connection
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
-spring.datasource.username=postgres
-spring.datasource.password=changemeinprod!
+
+# Database Connection (Railway will provide these via environment variables)
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5433/postgres}
+spring.datasource.username=${DATABASE_USER:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:changemeinprod!}
+
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Keycloak Configuration
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/event-ticket-platform
-keycloak.admin.url=http://localhost:9090
-keycloak.realm=event-ticket-platform
-keycloak.admin.username=admin
-keycloak.admin.password=admin
-keycloak.client.id=event-ticket-client
-keycloak.client.secret=nfCJmmoiCWbHW38m16bujSBIW3ujoJzN
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:9090/realms/event-ticket-platform}
+keycloak.admin.url=${KEYCLOAK_ADMIN_URL:http://localhost:9090}
+keycloak.realm=${KEYCLOAK_REALM:event-ticket-platform}
+keycloak.admin.username=${KEYCLOAK_ADMIN_USERNAME:admin}
+keycloak.admin.password=${KEYCLOAK_ADMIN_PASSWORD:admin}
+keycloak.client.id=${KEYCLOAK_CLIENT_ID:event-ticket-client}
+keycloak.client.secret=${KEYCLOAK_CLIENT_SECRET:nfCJmmoiCWbHW38m16bujSBIW3ujoJzN}
 
-# SMTP Configuration for Email Sending (Gmail)
-# To use Gmail: Enable 2FA and create App Password at https://myaccount.google.com/apppasswords
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=supersaiyan2k03@gmail.com
-spring.mail.password=tvxo sfox haqz ftph
+# SMTP Configuration for Email Sending
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME:supersaiyan2k03@gmail.com}
+spring.mail.password=${MAIL_PASSWORD:}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 # Frontend Configuration
-app.frontend.url=http://localhost:5173
+app.frontend.url=${FRONTEND_URL:http://localhost:5173}
+
+# Server Configuration
+server.port=${PORT:8080}
+
+# Actuator for health checks
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
