chore: Setup production branch with Railway configuration
- Add railway.toml for Railway deployment
- Add Procfile for process management
- Add system.properties for Java version
- Add actuator dependency for health checks
- Update application.properties with environment variables
- Add .env.production.example templates
- Configure SecurityConfig for actuator endpoints

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -23,11 +23,15 @@ services:
     environment:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_HTTP_ENABLED: "true"
+      KC_HOSTNAME_STRICT: "false"
     volumes:
       - keycloak-data:/opt/keycloak/data
     command:
       - start-dev
       - --db=dev-file
+      - --http-enabled=true
+      - --hostname-strict=false
 
 volumes:
   keycloak-data:
