--- a/keycloak/railway.toml
+++ b/keycloak/railway.toml
@@ -1,10 +1,3 @@
-[build]
-builder = "DOCKERFILE"
-dockerfilePath = "Dockerfile"
-
-[deploy]
-startCommand = "/opt/keycloak/bin/kc.sh start --optimized"
-healthcheckPath = "/health/ready"
-healthcheckTimeout = 300
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+# Railway configuration for Keycloak deployment
+# This is not needed when using Docker Image deployment in Railway dashboard
+# Keep this file for reference only
