feat: Add production deployment configuration for GCP and Railway
- Add comprehensive Google Cloud Platform deployment guide
- Add quick GCP deployment reference guide
- Add production-ready Dockerfiles for backend and Keycloak
- Add Cloud Build CI/CD pipeline configuration
- Add automated GCP deployment script
- Update README with deployment options
- Add .gcloudignore for optimized builds
- Configure Railway production deployment setup

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@ frontend/node_modules/
 # OS
 .DS_Store
 Thumbs.db
+
+# Google Cloud Platform
+gcp-credentials.txt
+gcp-deployment-info.txt
+.gcloud/
+
+# Cloud Build
+cloudbuild-local.yaml
