Fix Railway configuration to use Dockerfile and correct JAR path

--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,8 +1,9 @@
 [build]
-builder = "NIXPACKS"
+builder = "DOCKERFILE"
+dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "java -Dserver.port=$PORT -jar target/tickets-0.0.1-SNAPSHOT.jar"
+startCommand = "java -Dserver.port=$PORT -jar app.jar"
 healthcheckPath = "/actuator/health"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
