Use start-dev command for Keycloak to avoid build step requirement

--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -5,6 +5,6 @@ WORKDIR /opt/keycloak
 # Expose port
 EXPOSE 8080
 
-# Run Keycloak in production mode (non-optimized to allow runtime config)
-# All configs will come from environment variables at runtime
-ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start"]
+# Use start-dev for Railway deployment (simpler, no build step required)
+# For production with build step, use: build then start --optimized
+ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start-dev"]
