--- a/keycloak/railway.toml
+++ b/keycloak/railway.toml
@@ -1,6 +1,7 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "Dockerfile"
+dockerfilePath = "keycloak/Dockerfile"
+dockerContext = "keycloak"
 
 [deploy]
 restartPolicyType = "ON_FAILURE"
