Fix Render Keycloak Dockerfile path and simplify hostname config

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,8 @@ services:
   - type: web
     name: keycloak
     runtime: docker
-    dockerfilePath: ./Dockerfile
+    dockerfilePath: ./keycloak/Dockerfile
+    dockerContext: ./keycloak
     envVars:
       - key: KC_DB
         value: postgres
@@ -12,13 +13,8 @@ services:
         value: keycloak
       - key: KC_DB_PASSWORD
         value: 0o8bg1cxvPx8rgi8A7I13ZeA5kUGuNT6
-      - key: KC_HOSTNAME
-        fromService:
-          type: web
-          name: keycloak
-          property: host
-      - key: KC_HOSTNAME_STRICT_HTTPS
-        value: true
+      - key: KC_HOSTNAME_STRICT
+        value: false
       - key: KC_PROXY
         value: edge
       - key: KC_HTTP_ENABLED
