--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -2,9 +2,9 @@ FROM quay.io/keycloak/keycloak:23.0.0
 
 WORKDIR /opt/keycloak
 
-# Expose port
-EXPOSE 8080
+# Expose port (Render uses 10000)
+EXPOSE 10000
 
-# Use start-dev for Railway deployment (simpler, no build step required)
-# For production with build step, use: build then start --optimized
+# Use start-dev for Render deployment
+# Will listen on port specified by KC_HTTP_PORT env var
 ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start-dev"]
