--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -1,10 +1,24 @@
+FROM quay.io/keycloak/keycloak:23.0.0 as builder
+
+# Enable health and metrics support
+ENV KC_HEALTH_ENABLED=true
+ENV KC_METRICS_ENABLED=true
+
+# Configure a database vendor
+ENV KC_DB=postgres
+
+WORKDIR /opt/keycloak
+
+# Build Keycloak with production settings
+RUN /opt/keycloak/bin/kc.sh build
+
 FROM quay.io/keycloak/keycloak:23.0.0
+COPY --from=builder /opt/keycloak/ /opt/keycloak/
 
 WORKDIR /opt/keycloak
 
 # Expose port (Render uses 10000)
 EXPOSE 10000
 
-# Use start-dev for Render deployment
-# Will listen on port specified by KC_HTTP_PORT env var
-ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start-dev"]
+# Run optimized Keycloak
+ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start", "--optimized"]
