--- a/render.yaml
+++ b/render.yaml
@@ -15,6 +15,8 @@ services:
         value: 0o8bg1cxvPx8rgi8A7I13ZeA5kUGuNT6
       - key: KC_PROXY
         value: edge
+      - key: KC_HOSTNAME_STRICT
+        value: false
       - key: KC_HTTP_PORT
         value: 10000
       - key: KEYCLOAK_ADMIN
