--- a/render.yaml
+++ b/render.yaml
@@ -13,10 +13,8 @@ services:
         value: keycloak
       - key: KC_DB_PASSWORD
         value: 0o8bg1cxvPx8rgi8A7I13ZeA5kUGuNT6
-      - key: KC_PROXY
-        value: edge
-      - key: KC_HOSTNAME_STRICT
-        value: false
+      - key: KC_HTTP_ENABLED
+        value: true
       - key: KC_HTTP_PORT
         value: 10000
       - key: KEYCLOAK_ADMIN
