--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -33,6 +33,9 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 # Frontend Configuration
 app.frontend.url=${FRONTEND_URL:http://localhost:5173}
 
+# CORS Configuration
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
+
 # Server Configuration
 server.port=${PORT:8080}
 
